--- a/backend/package.json
+++ b/backend/package.json
@@ -14,16 +14,23 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.15.1",
+    "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.12",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "prisma": "^3.15.1",
-    "supertokens-node": "^9.3.0"
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "prisma": "^3.15.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.43",
+    "@types/passport": "^1.0.9",
     "typescript": "^4.7.3"
   }
 }
