--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -24,5 +24,5 @@
       "baseUrl": "."
     },
     "exclude": ["node_modules"],
-    "include": ["./src/**/*.tsx", "./src/**/*.ts", "src/config/auth.js"]
+    "include": ["./src/**/*.tsx", "./src/**/*.ts", "src/config/auth.js", "src/auth/passport.js"]
   }
