--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/material": "^5.8.4",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "firebase": "^9.8.3",
+    "framer-motion": "^6",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -18,8 +19,6 @@
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
