--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^6",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
