--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,6 +14,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
     
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/index.js", "pages/index.js"],
