--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,7 +13,7 @@
       "strictFunctionTypes": true,
       "noImplicitThis": true,
       "noUnusedLocals": true,
-      "noUnusedParameters": false,
+      "noUnusedParameters": true,
       "noImplicitReturns": true,
       "noFallthroughCasesInSwitch": true,
       "allowSyntheticDefaultImports": true,
