feat: added api calling

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,15 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/js-cookie": "^3.0.2",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "firebase": "^9.8.3",
     "framer-motion": "^6",
+    "i": "^0.3.7",
+    "js-cookie": "^3.0.1",
     "next": "latest",
+    "npm": "^8.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0"
