--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.5"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
